--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/11ty__eleventy-img": "^4.0.0"
   },
   "dependencies": {
+    "@11ty/eleventy-plugin-rss": "^2.0.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@11ty/eleventy-plugin-webc": "^0.11.2"
   }
