docs: eleventy configuration so I don't need to check the online doc too often

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "type": "module",
   "scripts": {
     "start": "eleventy --serve",
-    "build": "eleventy"
+    "build": "eleventy",
+    "build:gh-pages": "eleventy --pathprefix='/green-a11y-11ty/'"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0-alpha.17",
