--- a/.github/workflows/deploy-to-ghpages.yml
+++ b/.github/workflows/deploy-to-ghpages.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm install
 
       - name: Build static site
-        run: npm run build -- --pathprefix=green-a11y-11ty/
+        run: npm run build:gh-pages
 
       - name: Deploy to Github Pages
         uses: peaceiris/actions-gh-pages@v4
