--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -59,7 +59,7 @@ jobs:
         run: npm install
 
       - name: Build static site
-        run: npm run build -- --pathprefix="${{ steps.pages.outputs.base_url }}/"
+        run: npm run build -- --pathprefix="${{ steps.deployment.outputs.page_url }}/"
 
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
