--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # https://github.com/actions/configure-pages/blob/main/action.yml
+      # Expose output variables : base_url, origin, host, base_path
+      # Those are accessible prefixed by "steps.deployment.outputs."
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
@@ -59,10 +62,9 @@ jobs:
         run: npm install
 
       - name: Build static site
-        run: npm run build -- --pathprefix="${{ steps.deployment.outputs.page_url }}/"
+        run: npm run build -- --pathprefix="${{ steps.deployment.outputs.base_path }}/"
 
       - name: Upload artifact
-        # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./_site
