probe: remove double quotes for variable substitution

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -46,23 +46,23 @@ jobs:
         id: pages
         uses: actions/configure-pages@v5
 
-#      - name: Persist npm cache
-#        uses: actions/cache@v4
-#        with:
-#          path: ~/.npm
-#          key: "${{ runner.os }}-node-${{ hashFiles('**/package.json') }}"
-#
-#      - name: Persist Eleventy .cache
-#        uses: actions/cache@v4
-#        with:
-#          path: ./.cache
-#          key: ${{ runner.os }}-eleventy-fetch-cache
+      - name: Persist npm cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: "${{ runner.os }}-node-${{ hashFiles('**/package.json') }}"
+
+      - name: Persist Eleventy .cache
+        uses: actions/cache@v4
+        with:
+          path: ./.cache
+          key: ${{ runner.os }}-eleventy-fetch-cache
 
       - name: Install dependencies
         run: npm install
 
       - name: Build static site
-        run: npm run build -- --pathprefix="${{ steps.deployment.outputs.base_path }}/"
+        run: npm run build -- --pathprefix=${{ steps.deployment.outputs.base_path }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
