--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,7 +41,7 @@ jobs:
 
       # https://github.com/actions/configure-pages/blob/main/action.yml
       # Expose output variables : base_url, origin, host, base_path
-      # Those are accessible prefixed by "steps.deployment.outputs."
+      # Those are accessible prefixed by "steps.pages.outputs."
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
@@ -63,13 +63,13 @@ jobs:
 
       - name: Probe variables
         run: |
-          echo "steps.deployment.outputs.base_url  : ${{ steps.deployment.outputs.base_url }}"
-          echo "steps.deployment.outputs.origin    : ${{ steps.deployment.outputs.origin }}"
-          echo "steps.deployment.outputs.host      : ${{ steps.deployment.outputs.host }}"
-          echo "steps.deployment.outputs.base_path : ${{ steps.deployment.outputs.base_path }}"
+          echo "steps.pages.outputs.base_url  : ${{ steps.pags.outputs.base_url }}"
+          echo "steps.pages.outputs.origin    : ${{ steps.pags.outputs.origin }}"
+          echo "steps.pages.outputs.host      : ${{ steps.pags.outputs.host }}"
+          echo "steps.pages.outputs.base_path : ${{ steps.pags.outputs.base_path }}"
 
       - name: Build static site
-        run: npm run build -- --pathprefix=${{ steps.deployment.outputs.base_path }}
+        run: npm run build -- --pathprefix=${{ steps.pages.outputs.base_path }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
