build: simplify build scripts

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "type": "module",
   "scripts": {
     "start": "eleventy --serve",
-    "build": "eleventy",
-    "build:gh-pages": "eleventy --pathprefix='/green-a11y-11ty/'"
+    "build": "eleventy"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0-alpha.17",
