--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -62,7 +62,7 @@ jobs:
         run: npm install
 
       - name: Build static site
-        run: npm run build -- --pathprefix=${{ steps.pages.outputs.base_path }}
+        run: npm run build -- --pathprefix="https://next.baldir.fr"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
