chore: ignorer des fichiers générés par une extension de Obsidian

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ node_modules
 !/.obsidian/core-plugins.json
 !/.obsidian/templates.json
 !/.obsidian/plugins/templater-obsidian/data.json
+broken links output.md
