--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -17,5 +17,11 @@
     "_includes/"
   ],
   "tabSize": 3,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "pdfExportSettings": {
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
