actu: forum ouvert des communautés

--- a/_data/actualites.yml
+++ b/_data/actualites.yml
@@ -2,4 +2,7 @@
   description: "Je faciliterai de Dojo de programmation pour le meetup Software Craft Strasbourg"
   start_date : 2024-10-01T12:00:00+02:00
   href: https://www.meetup.com/fr-FR/software-crafters-strasbourg/events/303524329
-
+- name: "Forum ouvert des communautés Craft francophones"
+  description: "Accompagne-moi à [En ligne] Forum ouvert des communautés francophones"
+  start_date : 2024-10-23T18:00:00+02:00
+  href: https://meetu.ps/e/Nsz9g/wrQsd/i
