build: dépendance pour générer des calendiers ical

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@11ty/eleventy-plugin-webc": "^0.11.2",
     "@11ty/webc": "^0.11.4",
     "@types/11ty__eleventy-img": "^4.0.0",
+    "ics": "^3.8.1",
     "js-yaml": "^4.1.0",
-    "markdown-it": "^14.1.0"
+    "markdown-it": "^14.1.0",
+    "node-ical": "^0.20.0"
   },
   "dependencies": {
   }
