--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0-alpha.17",
-    "@11ty/eleventy-img": "^5.0.0-beta.8",
+    "@11ty/eleventy": "^3.0.0",
+    "@11ty/eleventy-img": "^5.0.0",
     "@11ty/eleventy-plugin-rss": "^2.0.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@11ty/eleventy-plugin-webc": "^0.11.2",
@@ -23,6 +23,6 @@
     "ical-generator": "^8.0.1",
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.1.0",
-    "vitest": "^2.1.4"
+    "vitest": "^2.1.5"
   }
 }
