--- a/_data/actualites.yml
+++ b/_data/actualites.yml
@@ -4,6 +4,12 @@ organisation: "Baldir"
 url: "https://baldir.fr"
 events_signature: "\r\n\r\n———\r\n\r\nMarc Bouvier\r\nhttps://baldir.fr\r\n06 63 20 56 38"
 events:
+  - title: "Podcast ”Toujours Plus“"
+    description: "Webinaire interview — ”Pourquoi j’ai choisi de ne pas utiliser l’IA ?“"
+    start: 2025-01-07T13:00:00+01:00
+    end: 2024-01-07T14:00:00+01:00
+    url: https://www.youtube.com/watch?v=puoiX4n7SMs
+    uid: C3062FDB-ECC8-480B-9B0E-FAAC67C67B91
   - title: "DevFest Strasbourg"
     description: "Je tiendrai le stand des meetups."
     start: 2024-11-21T09:00:00+01:00
