--- a/_data/actualites.yml
+++ b/_data/actualites.yml
@@ -40,3 +40,9 @@ events:
     end: 2024-10-01T14:00:00+02:00
     url: https://www.meetup.com/fr-FR/software-crafters-strasbourg/events/303524329
     uid: 1DA33DBF-1AFF-4032-9CB9-10A76D8C446E
+  - title: "AOF"
+    description: "AOF"
+    start: 2026-01-30T01:14:36+01:00
+    end: 2026-01-30T01:14:40+01:00
+    url: https://agileopenfrance.com
+    uid: 699F1090-22B9-4748-AB8B-49B796A100CE
