--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@11ty/webc": "^0.11.4",
     "@types/11ty__eleventy-img": "^4.0.0",
     "ical-generator": "^8.1.1",
-    "js-yaml": "^4.1.0",
+    "js-yaml": "4.1.1",
     "markdown-it": "^14.1.0",
+    "opml-generator2": "^1.0.3",
     "pagefind": "^1.3.0",
     "vitest": "^3.1.2"
   }
